// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toFixedLocale renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
>
  1200,00
</Text>
`;

exports[`toLocale renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
>
  1,200.00
</Text>
`;
